objects/ASI_GiftBox_Inventory_Master__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Podium stand</fullName>
                </value>
                <value>
                    <fullName>Glorifier</fullName>
                </value>
                <value>
                    <fullName>Glassware</fullName>
                </value>
                <value>
                    <fullName>Dice &amp; Dice Cup</fullName>
                </value>
                <value>
                    <fullName>Drink menus</fullName>
                </value>
                <value>
                    <fullName>FOC</fullName>
                </value>
                <value>
                    <fullName>Display/Listing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_POSM_Item__c</fullName>
        <formula>AND(!ISBLANK(TEXT(ASI_CRM_Category__c)), TEXT(ASI_CRM_Category__c)&lt;&gt; &apos;FOC&apos;)</formula>
        <label>POSM Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Item_Available_Quantity__c</fullName>
        <label>Available Quantity</label>
        <summarizedField>ASI_GiftBox_Inventory_Detail__c.ASI_GiftBox_Item_Available_Quantity__c</summarizedField>
        <summaryForeignKey>ASI_GiftBox_Inventory_Detail__c.ASI_GiftBox_Item_Id__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Item_Brand__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Brand</label>
        <referenceTo>ASI_MFM_Brand__c</referenceTo>
        <relationshipLabel>Gift Box Master</relationshipLabel>
        <relationshipName>Gift_Box_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Gift Box Master</label>
    <listViews>
        <fullName>ASI_GiftBox_VN</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Category__c</columns>
        <columns>ASI_GiftBox_Item_Brand__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_GiftBox_Inventory_Master__c.ASI_GiftBox_VN_GiftBox_Master</value>
        </filters>
        <filters>
            <field>ASI_CRM_Category__c</field>
            <operation>equals</operation>
        </filters>
        <label>VN GiftBox</label>
        <language>en_GB</language>
        <sharedTo>
            <roleAndSubordinates>ASI_VN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Category__c</columns>
        <columns>ASI_GiftBox_Item_Brand__c</columns>
        <columns>ASI_GiftBox_Item_Available_Quantity__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_GiftBox_Inventory_Master__c.ASI_GiftBox_VN_GiftBox_Master</value>
        </filters>
        <label>All</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>VN_FOC1</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Category__c</columns>
        <columns>ASI_GiftBox_Item_Brand__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_GiftBox_Inventory_Master__c.ASI_FOC_VN_Master</value>
        </filters>
        <label>VN FOC</label>
        <language>en_GB</language>
        <sharedTo>
            <roleAndSubordinates>ASI_VN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>VN_POSM</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Category__c</columns>
        <columns>ASI_GiftBox_Item_Brand__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_GiftBox_Inventory_Master__c.ASI_GiftBox_VN_GiftBox_Master</value>
        </filters>
        <filters>
            <field>ASI_CRM_Category__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>VN POSM</label>
        <language>en_GB</language>
        <sharedTo>
            <roleAndSubordinates>ASI_VN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Gift Box Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gift Box Master</pluralLabel>
    <recordTypes>
        <fullName>ASI_FOC_VN_Master</fullName>
        <active>true</active>
        <label>ASI FOC VN Master</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_GiftBox_VN_GiftBox_Master</fullName>
        <active>true</active>
        <label>ASI GiftBox VN GiftBox Master</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>